--- a/core/core/static/resume.css
+++ b/core/core/static/resume.css
@@ -5,7 +5,7 @@
     /* background-size:  100% 100%; */
 }
 .nav {
-    height: 5vh;
+    height: 3vh;
 }
 
 .centeredColumn {
@@ -18,7 +18,7 @@
     color: white;
     text-align: center;
     background-color: #2e3039;
-    min-height: 95vh;
+    min-height: 97vh;
     bottom: 1px;
 }    
 
